# desktop-goose-linux-port

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CppGoose  MEMORY.md  Makefile  README.md  STRUCTURE.md  cmake_install.cmake  config.ini  gemini_client_test  main.cpp  wlr-virtual-pointer-unstable-v1-client-protocol.h
include/: app_actions.h  assets.h  config.h  cursor_backend.h  gemini_client.h  goose.h  goose_math.h  items.h  tool_manager.h  ui.h  whisper_manager.h  world.h
src/: app_actions.cpp  assets.cpp  config.cpp  cursor_backend.cpp  gemini_client.cpp  goose.cpp  tool_manager.cpp  ui.cpp  whisper_manager.cpp  world.cpp
